new options -z and --zmax & windows ugrep-indexer.exe
- new option -z to index archives and compressed files
- new option --zmax=NUM to specify nesting depth of archives to index
- new ugrep-indexer.exe Windows version

--- a/Makefile.am
+++ b/Makefile.am
@@ -26,6 +26,7 @@ install-data-hook:
 		 echo "|                                                          |"; \
 		 echo "| Thank you for using ugrep!                               |"; \
 		 echo "|                                                          |"; \
+		 echo "|             https://ugrep.com                            |"; \
 		 echo "|             https://github.com/Genivia/ugrep             |"; \
 		 echo "|             https://github.com/Genivia/ugrep-indexer     |"; \
 		 echo "|__________________________________________________________|";
