--- a/Makefile.in
+++ b/Makefile.in
@@ -89,7 +89,9 @@ build_triplet = @build@
 host_triplet = @host@
 subdir = .
 ACLOCAL_M4 = $(top_srcdir)/aclocal.m4
-am__aclocal_m4_deps = $(top_srcdir)/m4/ax_check_bzlib.m4 \
+am__aclocal_m4_deps = $(top_srcdir)/m4/ax_check_brotlilib.m4 \
+	$(top_srcdir)/m4/ax_check_bz2lib.m4 \
+	$(top_srcdir)/m4/ax_check_bzip3lib.m4 \
 	$(top_srcdir)/m4/ax_check_lz4lib.m4 \
 	$(top_srcdir)/m4/ax_check_lzmalib.m4 \
 	$(top_srcdir)/m4/ax_check_zlib.m4 \
@@ -903,6 +905,7 @@ install-data-hook:
 		 echo "|                                                          |"; \
 		 echo "| Thank you for using ugrep!                               |"; \
 		 echo "|                                                          |"; \
+		 echo "|             https://ugrep.com                            |"; \
 		 echo "|             https://github.com/Genivia/ugrep             |"; \
 		 echo "|             https://github.com/Genivia/ugrep-indexer     |"; \
 		 echo "|__________________________________________________________|";
