--- a/configure.ac
+++ b/configure.ac
@@ -35,6 +35,8 @@ AC_SUBST(PLATFORM)
 
 AX_CHECK_ZLIB([], [echo "recommended zlib not found: ugrep-indexer option -z is disabled"])
 
+if test -n "${zlib_places}"; then
+
 AX_CHECK_BZ2LIB([], [echo "recommended libbz2 not found: ugrep-indexer option -z cannot index .bz and .bz2 files"])
 
 AX_CHECK_LZMALIB([], [echo "recommended liblzma not found: ugrep-indexer option -z cannot index .lzma and .xz files"])
@@ -44,6 +46,22 @@ AX_CHECK_LZ4LIB([], [echo "optional liblz4 not found: install if you want ugrep-
 AX_CHECK_ZSTDLIB([], [echo "optional libzstd not found: install if you want ugrep-indexer option -z to index .zst files"])
 
 AX_CHECK_BROTLILIB([], [echo "optional brotli library not found: install if you want ugrep-indexer option -z to index .br files"])
+
+AC_ARG_ENABLE(7zip,
+  [AS_HELP_STRING([--disable-7zip],
+                  [to disable 7zip and no longer index .7z files])],
+  [with_no_7zip="yes"],
+  [with_no_7zip="no"])
+AC_MSG_CHECKING(for --disable-7zip)
+if test "x$with_no_7zip" = "xno"; then
+  AC_MSG_RESULT(no)
+  CPPFLAGS="$CPPFLAGS -I../lzma/C"
+  LDFLAGS="$LDFLAGS -L../lzma/C"
+  LIBS="-lviiz $LIBS"
+else
+  EXTRA_CFLAGS="-DWITH_NO_7ZIP ${EXTRA_CFLAGS}"
+  AC_MSG_RESULT(yes)
+fi
 
 AC_ARG_WITH(bzip3,
   [AS_HELP_STRING([--with-bzip3],
@@ -55,6 +73,8 @@ if test "x$with_bzip3_library" != "x"; then
     unset with_bzip3
   fi
   AX_CHECK_BZIP3LIB([], [echo "optional libbzip3 not found: install if you want ugrep-indexer option -z to index .bz3 files"])
+fi
+
 fi
 
 AC_SUBST([PTHREAD_CFLAGS], [""])
