--- a/Makefile.in
+++ b/Makefile.in
@@ -349,7 +349,7 @@ target_alias = @target_alias@
 top_build_prefix = @top_build_prefix@
 top_builddir = @top_builddir@
 top_srcdir = @top_srcdir@
-SUBDIRS = src
+SUBDIRS = lzma/C src
 man1_MANS = man/ugrep-indexer.1
 EXTRA_DIST = README.md LICENSE.txt CONTRIBUTING.md CODE_OF_CONDUCT.md
 all: config.h
