add 7z archive indexing #7

--- a/configure.ac
+++ b/configure.ac
@@ -80,6 +80,6 @@ fi
 AC_SUBST([PTHREAD_CFLAGS], [""])
 AC_SUBST([PTHREAD_LIBS], ["-lpthread"])
 
-AC_CONFIG_FILES([Makefile src/Makefile])
+AC_CONFIG_FILES([Makefile src/Makefile lzma/C/Makefile])
 
 AC_OUTPUT
